--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/main_blackground">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/dimen_20dp" >
+        android:padding="@dimen/dimen_20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp" >
+            android:padding="@dimen/dimen_2dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,7 +43,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp" >
+            android:padding="@dimen/dimen_2dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -72,7 +73,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp" >
+            android:padding="@dimen/dimen_2dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -91,7 +92,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp" >
+            android:padding="@dimen/dimen_2dp">
 
             <TextView
                 android:id="@+id/tv_ev_2"
@@ -113,7 +114,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp" >
+            android:padding="@dimen/dimen_2dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -128,8 +129,7 @@
             android:id="@+id/ll_pic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-        </LinearLayout>
+            android:orientation="horizontal"></LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -139,8 +139,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_80dp"
-            android:padding="@dimen/dimen_2dp" >
-        </RelativeLayout>
+            android:padding="@dimen/dimen_2dp"></RelativeLayout>
 
         <View
             android:layout_width="match_parent"
@@ -167,13 +166,13 @@
             android:layout_centerVertical="true"
             android:gravity="center"
             android:text="选择标签"
-            android:textColor="@color/gray"
+            android:textColor="@color/gray_item_shua_textcolor"
             android:textSize="@dimen/text_size_top_bg" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_ev_0"
@@ -206,7 +205,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_ev_3"
@@ -242,7 +241,7 @@
             android:layout_centerVertical="true"
             android:gravity="left"
             android:text="其他意见或建议"
-            android:textColor="@color/gray"
+            android:textColor="@color/gray_item_shua_textcolor"
             android:textSize="@dimen/text_size_top_bg" />
 
         <EditText
@@ -262,7 +261,8 @@
             android:background="@drawable/ic_home_reg"
             android:gravity="center"
             android:text="确认提交"
-            android:textColor="@color/white"
+
+            android:textColor="@color/text_color"
             android:textSize="@dimen/dimen_40dp" />
     </LinearLayout>
 
