--- a/app/src/main/res/layout/view_customer_deadinfo.xml
+++ b/app/src/main/res/layout/view_customer_deadinfo.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
         style="@style/customer_detail_titleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="逝者信息" />
+        android:text="往生者信息" />
 
     <View
         android:layout_width="match_parent"
@@ -18,13 +18,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="逝者姓名：" />
+            android:text="姓名：" />
 
         <TextView
             android:id="@+id/tv_name"
@@ -34,18 +34,54 @@
             android:text="未知" />
     </LinearLayout>
 
-
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="逝者性别：" />
+            android:text="身份证号码：" />
+
+        <TextView
+            android:id="@+id/tv_cardid"
+            style="@style/customer_detail_contentTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="未知" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            style="@style/customer_detail_title2TextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="年龄：" />
+
+        <TextView
+            android:id="@+id/tv_age"
+            style="@style/customer_detail_contentTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="未知" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            style="@style/customer_detail_title2TextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="性别：" />
 
         <TextView
             android:id="@+id/tv_sex"
@@ -56,32 +92,11 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            style="@style/customer_detail_title2TextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="逝者年龄：" />
-
-        <TextView
-            android:id="@+id/tv_age"
-            style="@style/customer_detail_contentTextStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="未知" />
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
@@ -98,17 +113,16 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="逝者鞋码：" />
+            android:text="寿鞋鞋码：" />
 
         <TextView
             android:id="@+id/tv_shoeSize"
@@ -119,17 +133,16 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="逝者现状：" />
+            android:text="现状：" />
 
         <TextView
             android:id="@+id/tv_state"
@@ -140,11 +153,10 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
@@ -161,17 +173,16 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="逝者当前\n所在地：" />
+            android:text="当前\n所在地：" />
 
         <TextView
             android:id="@+id/tv_curAddress"
@@ -181,12 +192,30 @@
             android:text="未知" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <TextView
+            style="@style/customer_detail_title2TextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="寿衣信息：" />
+
+        <TextView
+            android:id="@+id/tv_choes"
+            style="@style/customer_detail_contentTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="未知" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
@@ -202,12 +231,29 @@
             android:text="未知" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <TextView
+            style="@style/customer_detail_title2TextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="另一半信息：" />
+
+        <TextView
+            android:id="@+id/tv_other"
+            style="@style/customer_detail_contentTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="未知" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
