--- a/app/src/main/res/layout/view_contractdetailinfo.xml
+++ b/app/src/main/res/layout/view_contractdetailinfo.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
         style="@style/customer_detail_titleTextStyle"
@@ -18,7 +18,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
@@ -35,11 +36,11 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
@@ -56,11 +57,11 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
@@ -79,11 +80,11 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <TextView
             style="@style/customer_detail_title2TextStyle"
@@ -98,6 +99,12 @@
             android:layout_height="wrap_content"
             android:text="未知" />
     </LinearLayout>
+
+
+    <ImageView
+        android:id="@+id/iv_data"
+        android:layout_width="@dimen/dimen_200dp"
+        android:layout_height="@dimen/dimen_200dp" />
 
     <View
         android:layout_width="match_parent"
