--- a/app/src/main/res/layout/activity_cutomerdetail.xml
+++ b/app/src/main/res/layout/activity_cutomerdetail.xml
@@ -44,16 +44,28 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_20dp" />
 
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_20dp"
             android:background="@color/white" />
 
-        <com.shian.shianlife.common.view.customerdetail.FunneralDetailInfoView
+        <com.shian.shianlife.common.view.customerdetail.FunneralDetailInfoOtherView
             android:id="@+id/fdiv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_20dp" />
+            android:layout_marginTop="@dimen/dimen_20dp"></com.shian.shianlife.common.view.customerdetail.FunneralDetailInfoOtherView>
+
+        <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/dimen_20dp"-->
+        <!--android:background="@color/white" />-->
+
+        <!--<com.shian.shianlife.common.view.customerdetail.FunneralDetailInfoView-->
+        <!--android:id="@+id/fdiv"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="@dimen/dimen_20dp" />-->
 
         <TextView
             android:layout_width="match_parent"
