--- a/app/src/main/res/layout/view_item_fwpdz.xml
+++ b/app/src/main/res/layout/view_item_fwpdz.xml
@@ -86,7 +86,6 @@
     </RelativeLayout>
 
 
-
     <RelativeLayout
         android:id="@+id/rl_qt2"
         android:layout_width="match_parent"
@@ -122,7 +121,6 @@
             android:layout_toRightOf="@id/tv_qt20"
             android:text="四川省成都市青羊区大石西路256号" />
     </RelativeLayout>
-
 
 
     <RelativeLayout
@@ -213,6 +211,7 @@
             android:layout_marginLeft="@dimen/dimen_15dp"
             android:layout_toLeftOf="@id/iv_qt42"
             android:layout_toRightOf="@id/tv_qt40"
+            android:ems="12"
             android:text="备注信息" />
     </RelativeLayout>
 
@@ -242,11 +241,11 @@
         </FrameLayout>
 
         <FrameLayout
-            android:visibility="gone"
             android:id="@+id/fl_over"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:visibility="gone">
 
             <TextView
                 style="@style/orderlist_item_btn_textStyle"
