--- a/app/src/main/res/layout/view_item_pgzx.xml
+++ b/app/src/main/res/layout/view_item_pgzx.xml
@@ -41,10 +41,16 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dimen_10dp"
-                android:layout_weight="1"
+                android:gravity="center"
                 android:text="高级户外棚	"
                 android:textColor="@color/black"
                 android:textSize="@dimen/text_size_detail_list" />
+
+            <ImageView
+                android:id="@+id/iv_data"
+                android:layout_width="@dimen/dimen_40dp"
+                android:layout_height="@dimen/dimen_40dp"
+                android:src="@drawable/moreinfo" />
 
             <TextView
                 android:id="@+id/tv_oi_4"
@@ -65,37 +71,39 @@
             android:layout_margin="@dimen/dimen_10dp"
             android:background="@drawable/user_down_line" />
 
-        <TextView
-            android:id="@+id/tv_oi_2"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="@dimen/dimen_10dp"
-            android:layout_marginLeft="@dimen/dimen_10dp"
-            android:layout_marginTop="@dimen/dimen_10dp"
-            android:layout_weight="1"
-            android:text="数量：1套"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_detail_list" />
-
-        <View
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_margin="@dimen/dimen_10dp"
-            android:background="@drawable/user_down_line" />
-
-        <TextView
-            android:id="@+id/tv_oi_3"
-            android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="@dimen/dimen_10dp"
-            android:layout_marginLeft="@dimen/dimen_10dp"
-            android:layout_marginTop="@dimen/dimen_10dp"
             android:layout_weight="1"
-            android:text="型号：HW1"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_detail_list" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_oi_2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:layout_marginLeft="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:layout_weight="1"
+                android:text="数量：1套"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_detail_list" />
+
+            <TextView
+                android:id="@+id/tv_oi_3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginBottom="@dimen/dimen_10dp"
+                android:layout_marginLeft="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:layout_weight="1"
+                android:text="型号：HW1"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_detail_list" />
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
