--- a/app/src/main/res/layout/view_contractdetailinfo.xml
+++ b/app/src/main/res/layout/view_contractdetailinfo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -103,8 +103,8 @@
 
     <ImageView
         android:id="@+id/iv_data"
-        android:layout_width="@dimen/dimen_200dp"
-        android:layout_height="@dimen/dimen_200dp" />
+        android:layout_width="@dimen/dimen_100dp"
+        android:layout_height="@dimen/dimen_888dp" />
 
     <View
         android:layout_width="match_parent"
