--- a/app/src/main/res/layout/activity_transit_item.xml
+++ b/app/src/main/res/layout/activity_transit_item.xml
@@ -6,9 +6,9 @@
 
     <TextView
         android:id="@+id/transitName"
-        android:textColor="@color/blackgroundmain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:textColor="@color/blackgroundmain" />
 
     <TextView
         android:id="@+id/lightNum"
