--- a/app/src/main/res/layout/activity_neworder.xml
+++ b/app/src/main/res/layout/activity_neworder.xml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:background="@color/main_blackground"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="@dimen/dimen_40dp" >
+        android:padding="@dimen/dimen_40dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_40dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="*"
-                android:textColor="@color/red" />
 
             <TextView
                 style="@style/edit_order_textStyle"
@@ -28,6 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dimen_10dp"
+                android:drawableLeft="@drawable/xingxing"
                 android:text="客户姓名:" />
 
             <EditText
@@ -43,14 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="*"
-                android:textColor="@color/red" />
 
             <TextView
                 style="@style/edit_order_textStyle"
@@ -58,6 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dimen_10dp"
+                android:drawableLeft="@drawable/xingxing"
                 android:text="联系电话:" />
 
             <EditText
@@ -75,15 +66,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="*"
-                android:textColor="@color/red"
-                android:visibility="visible" />
 
             <TextView
                 style="@style/edit_order_textStyle"
@@ -91,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dimen_10dp"
+                android:drawableLeft="@drawable/xingxing"
                 android:text="业务类型:" />
 
             <Spinner
@@ -106,15 +91,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="*"
-                android:textColor="@color/red"
-                android:visibility="visible" />
 
             <TextView
                 style="@style/edit_order_textStyle"
@@ -122,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dimen_10dp"
+                android:drawableLeft="@drawable/xingxing"
                 android:text="客户当前地址:" />
         </LinearLayout>
 
@@ -139,23 +118,16 @@
             android:layout_marginLeft="@dimen/dimen_10dp"
             android:background="@drawable/shape_et_order"
             android:hint="请输入详细地址"
-            android:visibility="gone"
             android:padding="@dimen/dimen_10dp"
-            android:textSize="@dimen/text_size_detail_list" />
+            android:textSize="@dimen/text_size_detail_list"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="*"
-                android:textColor="@color/red"
-                android:visibility="invisible" />
 
             <TextView
                 style="@style/edit_order_textStyle"
@@ -163,6 +135,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dimen_10dp"
+                android:drawableLeft="@drawable/xingxing"
                 android:text="备注:" />
         </LinearLayout>
 
@@ -182,30 +155,32 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_editorder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_20dp"
+                android:layout_marginRight="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
                 android:layout_weight="1"
                 android:background="@drawable/ic_home_reg"
                 android:gravity="center"
                 android:text="创建订单"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color"
                 android:textSize="@dimen/dimen_40dp" />
 
             <TextView
                 android:id="@+id/tv_qiatan"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dimen_20dp"
+                android:layout_marginLeft="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/dimen_10dp"
                 android:layout_weight="1"
                 android:background="@drawable/ic_home_reg"
                 android:gravity="center"
                 android:text="进入洽谈"
-                android:textColor="@color/white"
+                android:textColor="@color/text_color"
                 android:textSize="@dimen/dimen_40dp" />
         </LinearLayout>
     </LinearLayout>
