--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,6 @@
             android:layout_height="@dimen/dimen_80dp"
             android:layout_marginLeft="@dimen/dimen_40dp"
             android:layout_marginRight="@dimen/dimen_40dp"
-
             android:background="@drawable/login_ed_bk"
             android:drawableLeft="@drawable/login_password"
             android:drawablePadding="@dimen/dimen_20dp"
@@ -91,6 +90,31 @@
             android:text="登陆"
             android:textColor="@color/text_color"
             android:textSize="@dimen/dimen_40dp" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:buttonTint="@color/white"
+                android:textColor="@color/white"
+                android:checked="true"
+                android:id="@+id/rb_state1"
+                android:text="殡仪"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <RadioButton
+                android:buttonTint="@color/white"
+                android:textColor="@color/white"
+                android:id="@+id/rb_state2"
+                android:text="公墓"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RadioGroup>
+
 
         <TextView
             android:id="@+id/btn_login_web"
